--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -9,5 +9,6 @@ $theme := {
   info: $blue.lighten-1
   success: $green.lighten-2
   warning: $amber.darken-2
+  p: $bluegrey lighten-2
 }
 @import '../../node_modules/vuetify/src/stylus/main'
